--- a/my-project/css/style.css
+++ b/my-project/css/style.css
@@ -7,58 +7,94 @@
     font-family: 'Open Sans', sans-serif;
 }
 .header{
-text-align: center;
+    width: 100vw;
+    padding: 15px;
+    margin: 0 auto 30px;
+    position: relative;
 }
 .nav{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    width: 1510px;
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    z-index: 100;
+    top: 0;
+    left: 0;
     background: black;
-    justify-content: end;
-    padding: 15px 170px 15px 120px
-}
+    width: 100vw;
+    padding: 15px;
+    }
 .nav_list_item{
     display: flex;
-    justify-content: end;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
     align-items: center;
-    text-align: center;
     color: #FFFFFF;
-    padding: 30px ;
-}
+    padding-right: 25px;
+    }
 .nav_list{
     display: flex;
 
-
-}
-.nav_list_item_img{
-    padding: 15px 570px 15px 0;
     }
 .a{
-    color: #F5F5F5;
+        color: #F5F5F5;
+}
+.a:hover{
+    color: #FFFFFF;
+    background: #EC7979;
+    border-radius: 10px;
+}
+.a:active{
+    background: brown;
+    border-radius: 10px;
+}
+.a_axit {
+    display: flex;
+
+    margin-left: 50px;
+}
+
+
+.wrapper_modern_axure{
+    width: 100vw;
+    display: flex;
+    position: relative;
+    margin: 0 auto;
+    justify-content: center;
 }
 .modern_axure{
     display: flex;
+    position: relative;
     margin: 0 auto;
-    background: url("../assets/img/img-city2.png"), rgba(0, 0, 0, 0.5);;
-    max-width: 1510px;
-    height: 1026px ;
+    background: url("../assets/img/img-city.png") no-repeat;
+    background-size: cover;
+    justify-content: center;
 
+    }
+.modern_axure:before{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 
 }
 .axit{
-    padding: 210px 15px 185px 170px;
-    width: 855px;
+    padding: 210px 15px 185px 50px;
+
+    z-index: 3;
 }
 .AXIT{
     padding-bottom: 73px;
 
 
+
 }
 .axit_p{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 48px;
@@ -71,11 +107,12 @@ text-align: center;
     margin: 50px 0 42px 0;
 }
 .p_axit{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     color: #FFFFFF;
+    width: 270px;
 
 }
 .download{
@@ -84,30 +121,41 @@ text-align: center;
     text-align: center;
     padding: 20px;
     margin-top: 42px;
-
+}
+.download:hover{
+    color: #FFFFFF;
+    background: #EC7979;
+}
+.download:active{
+    background: brown;
 
 }
 .a_download{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     color: #FFFFFF;
 
 }
-.form{
+.form_free{
     margin:283px 170px 293px 30px ;
-    width: 470px;
+    max-width: 470px;
     background: #FFFFFF;
     border-radius: 10px;
+    z-index: 2;
+
+}
+.form_content{
+    padding: 0 50px;
 }
 .try{
     text-align: center;
     padding: 33px 50px;
 }
 .p_try{
-       display: inline-block;
-    font-family: 'Open Sans';
+    display: inline-block;
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -115,63 +163,66 @@ text-align: center;
 }
 .p_free{
     display: inline-block;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     color: #EC7979;
 }
-.p_form{
-    display: flex;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: #BDBDBD;
-    margin: 45px 50px 16px ;
-}
-.hr_form{
+.form{
+    display: block;
     width: 370px;
-    border-color: #FFFFFF;
-    margin-left: 50px;
+    padding: 15px;
+    border: none;
+    margin-bottom: 45px;
+    border-bottom: 2px solid #BDBDBD;
+    outline: none;
 }
-.get_st{
-    margin-top: 75px;
-    width: 470px;
-    background-color: #EC7979;
-    border-radius: 0px 0px 10px 10px;
-    padding: 22px;
-    text-align: center;
-}
-.a_get_st{
-    font-family: 'Open Sans';
+
+.btn_get_st{
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
     color: #FFFFFF;
+    background: #EC7979;
+    border: none;
+    width: 470px;
+    height: 60px;
+    border-radius: 0 0 10px 10px;
+    cursor: pointer;
+}
+.btn_get_st:active{
+    background: brown;
+}
+
+
+.wrapper_social{
+    display: flex;
+
 }
 .social{
     display: flex;
     margin: 0 auto;
-    width: 1510px;
+
 }
 .h4_social{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     color: #333333;
-    padding: 18px 50px 18px 170px;
-    width: 470px;
+    padding: 18px 50px 18px 50px;
+
 }
 .p_social{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
     color: #86878B;
-    padding: 0 50px 0 170px;
+    padding: 0 50px;
 }
 .icons{
     display: flex;
@@ -181,18 +232,30 @@ text-align: center;
 }
 .img_icon{
     padding-right: 27px;
+    fill: #CCCCCC;
+    width: 100px;
+    height: 100px;
+    transition: 0.3s;
+}
+.img_icon:hover{
+    fill: #EC7979;
+    transform: scale(1.2) rotate(3600deg);
+    cursor: pointer;
+    stroke: black;
+    stroke-width: 1px;
+
 }
 
-
 .tabs-section{
-    max-width: 1184px;
+
+    padding: 0 14px;
     margin: 0 auto;
 
 }
 .tab1, .tab2, .tab3{
     display: inline-block;
     width: 200px;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -218,10 +281,11 @@ text-align: center;
     margin-bottom: -1px;
 }
 .wrapper-tabs{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     border: 1px solid #C6CBCD;
     border-radius: 5px;
-    border-top-left-radius: 0px;
+    border-top-left-radius: 0;
     border-top-color: #F5F5F5;
     border: 1px solid #C6CBCD;
     font-size: 0;
@@ -234,7 +298,7 @@ text-align: center;
     vertical-align: top;
 }
 .h3-wrapper-tabs{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
@@ -245,7 +309,7 @@ text-align: center;
     margin-bottom: 27px;
 }
 .p-wrapper-tabs{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -260,16 +324,19 @@ text-align: center;
 
 }
 .download-tabs{
-    height: 58px;
     width: 270px;
     background-color:#EC7979;
     text-align: center;
     padding: 16px;
     margin-bottom: 54px;
+    cursor: pointer;
 
 }
+.download-tabs:active{
+    background: brown;
+}
 .p-download-tabs{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -279,9 +346,7 @@ text-align: center;
 
 
 .block-awesome{
-    max-width: 1170px;
-
-    /*border: 2px solid green;*/
+    padding: 0 15px;
     margin: 0 auto;
     text-align: center;
 }
@@ -292,19 +357,20 @@ text-align: center;
     margin: 0 auto 40px;
     }
 .h2-awesome {
-    width: 1170px;
-    margin-top: 50px;
+    text-align: center;
+    margin: 50px auto 0;
     padding: 56px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
-    text-align: center;
     color: #000000;
+
+
 
 }
 .h5-awesome {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -314,34 +380,36 @@ text-align: center;
 
 }
 .h3-awesome{
-    width: 369px;
-    height: 100px;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     text-align: center;
     color: #000000;
-    margin-top: 39px;
+    margin: 39px auto 50px;
 }
 .p-awesome{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     text-align: center;
     color: #000000;
 }
-.text1-awesome {
-    width: 370px;
-    height: 454px;
-    display: inline-block;
+.text-awesome{
+    display: flex;
 }
-.img-awesome{
-    margin-top: 15px;
-    height: 55px;
-    width: 55px;
-
+.text1-awesome {
+       display: block;
+}
+.img-awesome1{
+    margin: 7px auto;
+}
+.img-awesome2 {
+    margin: 20px auto;
+}
+.img-awesome3 {
+    margin: 13px auto;
 }
 .box-img-awesome {
     width: 92px;
@@ -353,14 +421,13 @@ text-align: center;
 
 
 .wrapper-pricing{
-    max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
-}
+   }
 .h2-pricing{
     padding: 53px;
     text-align: center;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
@@ -372,7 +439,7 @@ text-align: center;
 }
 .h4_text-pricing{
     margin-top: 40px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -380,9 +447,9 @@ text-align: center;
     margin-bottom: 59px;
 }
 .price{
-    height: 560px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .basic{
     width: 370px;
@@ -393,6 +460,7 @@ text-align: center;
     width: 370px;
     text-align: center;
     box-shadow: 2px 2px 15px 1px gray;
+
 }
 .pro{
     width: 370px;
@@ -402,7 +470,7 @@ text-align: center;
 .version{
     background: #333333;
     border: 2px solid #F5F5F5;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -412,7 +480,7 @@ text-align: center;
 .price1{
     background: #333333;
     border: 2px solid #F5F5F5;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -422,7 +490,7 @@ text-align: center;
 .duration{
     background: #333333;
     border: 2px solid #F5F5F5;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -430,7 +498,7 @@ text-align: center;
     padding: 15px 0;
 }
 .gb{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -440,7 +508,7 @@ text-align: center;
 
 
 .customer{
-    width: 1170px;
+
     margin: 100px auto 0;
     padding-top: 57px;
     text-align: center;
@@ -448,7 +516,7 @@ text-align: center;
 }
 .h2-customers{
     text-transform: uppercase;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
@@ -462,7 +530,7 @@ text-align: center;
 }
 .p-customers{
     margin: 40px 0 65px 0;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -473,15 +541,17 @@ text-align: center;
 .opinions-customers{
     display: flex;
     margin: 0 auto;
-    max-width: 1200px;
+
     padding: 40px 15px 0;
    }
 .opinion-customer{
     display: flex;
+    position: relative;
     max-width: 370px;
-    padding: 50px 0;
+    margin: 5px;
+    padding: 50px 10px;
     margin: 0 auto;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -491,66 +561,38 @@ text-align: center;
     border-radius: 10px;
     align-items: center;
 }
-.triangle{
-    display: flex;
-    margin: 0 auto;
-}
-.triangle1{
-    display: flex;
+.opinion-customer:before{
     position: absolute;
-    top: 4167px;
-    left: 100px;
-    width: 0;
-    height: 0;
+    content: "";
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
     border-top: 30px solid #E2E2E2;
-}
-.triangle2{
-    display: flex;
-    position: absolute;
-    top: 4167px;
-    left: 500px;
-    width: 0;
-    height: 0;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 30px solid #E2E2E2;
-}
-.triangle3{
-    display: flex;
-    position: absolute;
-    top: 4167px;
-    left: 900px;
-    width: 0;
-    height: 0;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 30px solid #E2E2E2;
+    left: 35px;
+    top: 100%;
 }
 .who{
     display: flex;
+
     margin: 66px auto 0;
-    width: 1200px;
     padding: 0 15px;
 
 }
 .who-is-who{
     display: flex;
     align-items: center;
-    width: 370px;
     padding: 15px;
     margin: 0 auto;
+    width: 370px;
 }
 .name-customer{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     color: #000000;
 }
 .profession-customer{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -559,47 +601,81 @@ text-align: center;
 .img-customer{
     margin-right: 30px;
 }
+
+
+.wrapper_stylish{
+padding-bottom: 50px;
+}
 .stylish{
-    background:  url("../assets/img/banner.png");
-    width: 1510px;
-    height: 442px;
+    background:  url("../assets/img/banner.png") no-repeat;
+    position: relative;
+    background-size: cover;
     margin: 80px auto 0;
     text-align: center;
 }
+.stylish:before{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+}
 .h2-stylish{
-    padding: 107px 0 50px;
+    position: relative;
+    padding: 100px 0 50px;
     margin-top: 114px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
     color: #FFFFFF;
+    z-index: 3;
 }
 .hr_stylish{
+    position: relative;
     width: 170px;
     border-color: #FFFFFF;
     margin: 0 auto;
+    z-index: 3;
 }
 .p-stylish{
+    position: relative;
     margin: 40px 0 63px 0;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     color: #FFFFFF;
+    z-index: 3;
 }
 .download-stylish{
+    position: relative;
     width: 370px;
     margin: 0 auto;
-    padding: 20px 0;
-    border: 2px solid #FFFFFF
+    padding: 15px 0;
+    border: 2px solid #FFFFFF;
+    z-index: 3;
+    cursor: pointer;
+}
+.download-stylish:hover{
+    color: #FFFFFF;
+    background: #EC7979;
+}
+.download-stylish:active{
+    background: brown;
+
 }
 .a_download-stylish{
-    font-family: 'Open Sans';
+        font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     color: #FFFFFF;
+    z-index: 3;
+
 }
 
 
@@ -612,7 +688,7 @@ margin: 0 auto;
 }
 .h2-contact{
     margin: 110px auto 57px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
@@ -621,71 +697,60 @@ margin: 0 auto;
 }
 .p-contact{
     margin: 40px 0 90px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     text-align: center;
     color: #86878B;
 }
-.message-us{
-    width: 1200px;
+.form_contact{
+
+    padding: 0 15px;
     display: flex;
+flex-direction: column;
     margin: 0 auto;
 }
-.hr_form-stylish{
-    margin-bottom: 50px;
-}
-.registration{
+.form_2{
     width: 570px;
-    margin: 0 auto;
-    text-align: center;
 }
 .message{
-    width: 570px;
-    margin: 0 auto;
-    text-align: center;
-}
-.p_form-stylish{
+    padding-top: 14px;
+    width: 500px;
+       }
+.form_wrapper{
     display: flex;
-    justify-items: flex-start;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    margin-bottom: 16px;
-    color: #BDBDBD;
-}
-.p_form-message{
-    display: flex;
-    justify-items: flex-start;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: #BDBDBD;
-    margin-bottom: 190px;
+    justify-content: center;
 }
 .send-message{
-    width: 370px;
-    margin: 50px auto;
-    background: #EC7979;
-    padding: 20px;
-
-}
-.p-send-message{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 15px;
     color: #FFFFFF;
-
+    background: #EC7979;
+    border: none;
+    width: 470px;
+    height: 60px;
+    cursor: pointer;
+    margin-bottom: 50px;
+}
+.send-message:active{
+    background: brown;
+}
+.text_area{
+    margin-left: 15px;
+    resize: none;
+    width: 500px;
+    height: 225px;
+    border: none;
+    border-bottom: 2px solid #BDBDBD;
+    outline: none;
 }
 
 
 .footer{
-    width: 1510px;
-    height: 165px;
+    width: 100%;
     background: #000000;
     margin: 0 auto;
 
@@ -697,8 +762,8 @@ margin: 0 auto;
     align-items: center;
 }
 .p-footer{
-    padding-top: 20px;
-    font-family: 'Raleway';
+    padding: 20px 0;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -706,9 +771,20 @@ margin: 0 auto;
     text-align: center;
 }
 
+@media (max-width: 1200px) {
+    .text_area {
+        margin-left: 15px;
+        resize: none;
+        width: 400px;
+        height: 225px;
+        border: none;
+        border-bottom: 2px solid #BDBDBD;
+        outline: none;
+    }
+    .message {
+        padding-top: 14px;
+        max-width: 400px;
 
-
-
-
-
+    }
+  }
 
