--- a/my-project/css/style.css
+++ b/my-project/css/style.css
@@ -329,7 +329,7 @@
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 10px;
     color: #000000;
     margin-bottom: 27px;
 }
@@ -868,7 +868,6 @@ flex-direction: column;
         max-width: 1200px;
         margin: 0 auto;
     }
-
     .text_area {
         margin-left: 15px;
         resize: none;
@@ -1029,60 +1028,9 @@ margin: 0 auto;
 
 }
 @media (min-width: 320px) and (max-width: 768px) {
-    .form_free{
-        margin: 200px 20px;
-        width: 100%;
-        height: 40%;
-        max-width: 470px;
-        background: #FFFFFF;
-        border-radius: 10px;
-        z-index: 2;
-
-    }
-    .p-wrapper-tabs{
-        font-size: 10px;
-    }
-    .box-img-awesome {
-        width: 200px;
-        height: 200px;
-        border: 1px solid #EC7979;
-        border-radius: 50%;
-        margin: 0 auto;
-    }
-    .img-awesome1{
-        width: 80%;
-        height: 80%;
-        margin: 7px auto;
-    }
-    .img-awesome2 {
-        width: 80%;
-        height: 60%;
-        margin: 42px auto;
-    }
-    .img-awesome3 {
-        margin: 25px auto;
-        width: 60%;
-        height: 80%;
-    }
-    .p-contact{
+    .p-stylish{
 
         font-size: 10px;
 
-    }
-    .form_wrapper{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .message{
-        padding-top: 14px;
-        width: 90%;
-    }
-    .registration{
-        width: 90%;
-    }
-    .p-footer{
-        font-size: 10px;
     }
 }
