--- a/my-project/css/style.css
+++ b/my-project/css/style.css
@@ -9,17 +9,18 @@
 .header{
     width: 100vw;
     padding: 15px;
-    margin: 0 auto 30px;
+    margin: 0 auto ;
     }
 .nav{
     width: 100vw;
     justify-content: center;
     position: fixed;
-    z-index: 100;
+    z-index: 99;
     top: 0;
     left: 0;
     background: black;
     padding: 15px;
+
     }
 .nav_wrapper{
     max-width: 1200px;
@@ -59,6 +60,82 @@
     flex-grow: 1;
     margin-left: 50px;
 }
+.hamburger-menu{
+    display: none;
+}
+.menu{
+    opacity: 1;
+}
+.menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 100;}
+.menu__btn > span, .menu__btn > span::before, .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: gray;
+    z-index: 100;
+}
+.menu__btn > span::before {
+    content: '';
+    top: -8px;
+}
+.menu__btn > span::after {
+    content: '';
+    top: 8px;
+}
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: black;
+    }
+.menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+}
+.menu__item:hover {
+    color: #FFFFFF;
+    background: #EC7979;
+}
+#menu:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+}
+#menu:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+}
+#menu:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+#menu:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+}
+
+
 
 
 .wrapper_modern_axure{
@@ -817,9 +894,27 @@ flex-direction: column;
     }
   }
 @media (min-width: 1024px) and (max-width: 1200px) {
+    .registration{
+        width: 40%;
+
+    }
+    .message{
+        padding: 14px 15px;
+        width: 40%;
+    }
+    .text_area{
+        margin-left: 15px;
+        resize: none;
+        width: 300px;
+        height: 197px;
+        border: none;
+        border-bottom: 2px solid #BDBDBD;
+        outline: none;
+    }
 
 }
 @media (min-width: 768px) and (max-width: 1024px) {
+
     .wrapper_modern_axure{
         max-width: 1200px;
         display: flex;
@@ -1024,13 +1119,312 @@ margin: 0 auto;
     .h2-contact{
         font-size: 50px;
     }
+    .registration{
+        width: 50%;
+
+    }
+    .message{
+        padding: 14px 15px;
+        width: 50%;
+    }
+    .text_area{
+        margin-left: 15px;
+        resize: none;
+        width: 300px;
+        height: 197px;
+        border: none;
+        border-bottom: 2px solid #BDBDBD;
+        outline: none;
+    }
 
 
 }
 @media (min-width: 320px) and (max-width: 768px) {
+    .hamburger-menu{
+        display: flex;
+    }
+    .menu__box {
+z-index: 99;
+        visibility: visible;
+
+    }
+    .nav_list{
+        display: none;
+    }
+    .wrapper_modern_axure{
+        max-width: 1200px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: 0 auto;
+        justify-content: center;
+    }
+    .axit{
+        justify-content: center;
+        padding: 210px 15px 0 15px;
+        margin: 0 auto;
+        z-index: 3;
+    }
+    .hr_axit{
+        width: 170px;
+        border-color: #FFFFFF;
+        margin: 50px auto 42px;
+
+    }
+    .p_axit{
+        margin: 0 auto;
+    font-size: 12px;
+    }
+    .axit_p{
+        font-size: 30px;
+    }
+    .download{
+        margin: 50px auto;
+        width: 90%;
+    }
+    .form_free{
+        margin: 20px auto;
+        width: 100%;
+        height: 40%;
+        max-width: 70vw;
+        background: #FFFFFF;
+        border-radius: 10px;
+        z-index: 2;
+
+
+    }
+    .btn_get_st{
+        width: 100%;
+        max-width: 70vw;
+    }
+    .wrapper_social{
+        display: flex;
+        flex-direction: column;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    .h4_social{
+        font-size: 20px;
+        text-align: center;
+    }
+    .p_social{
+        font-size: 13px;
+        text-align: center;
+    }
+    .img_icon{
+
+        width: 50%;
+        height: 50%;
+
+    }
+
+    .p-wrapper-tabs{
+        font-size: 20px;
+    }
+    .p-awesome{
+        font-size: 30px;
+        width: 70%;
+        text-align: center;
+        margin: 0  auto;
+    }
+    .wrapper-tabs{
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border: 1px solid #C6CBCD;
+        border-radius: 5px;
+        border-top-left-radius: 0;
+        border-top-color: #F5F5F5;
+        border: 1px solid #C6CBCD;
+        gap: 30px;
+        font-size: 0;
+    }
+    .h3-wrapper-tabs{
+        font-size: 20px;
+    }
+    .p-wrapper-tabs{
+        font-size: 13px;
+
+    }
+    .img-tabs{
+        display: none;
+    }
+    .content-tabs{
+        display: inline-block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        vertical-align: top;
+    }
+    .download-tabs{
+        margin: 0 auto 54px;
+        background-color:#EC7979;
+        justify-content: center;
+        text-align: center;
+        padding: 16px;
+        cursor: pointer;
+
+    }
+    .tabs {
+        max-width: 1200px;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+
+
+    }
+    .h2-awesome {
+        font-size: 30px;
+    }
+    .p-awesome{
+        font-size: 13px;
+    }
+    .text-awesome{
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+    .h2-pricing{
+        font-size: 30px;
+    }
+    .price{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .basic{
+        width: 70%;
+        text-align: center;
+        padding: 30px 0;
+    }
+    .optima{
+        width: 70%;
+        text-align: center;
+
+    }
+    .pro{
+        width: 70%;
+        text-align: center;
+        padding-top: 30px;
+    }
+    .version{
+        font-size: 20px;
+    }
+    .price1{
+        font-size: 20px;
+    }
+    .duration{
+        font-size: 20px;
+    }
+    .gb{
+        font-size: 20px;
+    }
+    .tab1, .tab2, .tab3{
+        font-size: 20px;
+
+    }
+    .h2-customers{
+        font-size: 30px;
+    }
+    .opinion-customer1{
+        display: none;
+    }
+    .opinion-customer{
+        max-width: 90%;
+        font-size: 13px;
+
+    }
+    .opinion-customer:before{
+        position: absolute;
+        content: "";
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 15px solid #E2E2E2;
+        left: 100px;
+        top: 100%;
+    }
+    .who-is-who{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 15px;
+        margin: 0 auto;
+        width: 90%;
+    }
+    .who-is-who1{
+        display: none;
+    }
+    .img-customer{
+        width: 40%;
+        height: 80%;
+        margin-right: 30px;
+    }
+    .name-customer{
+        font-size: 20px;
+    }
+    .profession-customer{
+
+        font-size: 15px;
+
+    }
+    .h2-stylish{
+        font-size: 30px;
+    }
+    .h2-contact{
+        font-size: 30px;
+    }
+    .form_wrapper{
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .registration{
+        width: 90%;
+
+    }
+    .message{
+        padding-top: 14px;
+        width: 90%;
+        margin-bottom: 20px;
+    }
+    .text_area {
+        margin-left: 15px;
+        resize: none;
+        width: 90%;
+        border: none;
+        border-bottom: 2px solid #BDBDBD;
+        outline: none;
+    }
     .p-stylish{
+        font-size: 12px;
 
-        font-size: 10px;
-
+    }
+    .send-message{
+        font-family: 'Open Sans', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15px;
+        color: #FFFFFF;
+        background: #EC7979;
+        border: none;
+        width: 90%;
+        height: 60px;
+        cursor: pointer;
+        margin-bottom: 50px;
+    }
+    .download-stylish{
+        position: relative;
+        width: 90%;
+        margin: 0 auto;
+        padding: 15px 0;
+        border: 2px solid #FFFFFF;
+        z-index: 3;
+        cursor: pointer;
     }
 }
